Sat Nov 15 20:39:06 2014  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_document.rb
	  (REXMLTests::TestDocument::EntityExpansionLimitTest): Use
	  one test method for one test.

Sat Nov 15 20:16:59 2014  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_document.rb
	  (REXMLTests::TestDocument::EntityExpansionLimitTest): Use
	  setup and teardown instead of ensure in test.

Sat Nov 15 20:11:34 2014  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_document.rb (REXMLTests::TestDocument): Group
	  entity expansion limit related tests.

Sat Nov 15 20:09:00 2014  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_document.rb (REXMLTests::TestDocument::BomTest):
	  Fix wrong parent class. It doesn't need inherit tests in
	  TestDocument class.

Sat Nov 15 19:48:59 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/mkmf.rb (depend_rules): support comments during a line.

	* lib/mkmf.rb (depend_rules): apply RULE_SUBST even if the dependency
	  file contains path.

Sat Nov 15 19:25:46 2014  Tanaka Akira  <akr@fsij.org>

	* common.mk: Remove comments in Dependency lines.
	  Notified by usa.

	* enc/depend: Ditto.

	* ext/**/depend: Ditto.

Sat Nov 15 16:28:05 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_throw_obj): throw UncaughtThrowError instead of
	  ArgumentError.  [Feature #10480]

Sat Nov 15 14:13:38 2014  Tanaka Akira  <akr@fsij.org>

	* tool/update-deps: Extend to fix dependencies.

	* common.mk: Dependencies updated by tool/update-deps.

	* enc/depend: Ditto.

	* ext/**/depend: Ditto.

Fri Nov 14 17:36:48 2014  Tanaka Akira  <akr@fsij.org>

	* tool/update-deps: Support GNU Make 4.0.

Fri Nov 14 16:59:53 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (default_proc_for_compat_func): check arguments number and
	  type, and get rid of reentering this default proc.

Fri Nov 14 16:33:06 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_stat_internal): support compatible layer for
	  GC.stat(symbol) type access.
