@@ -1,3 +1,10 @@
+Sat Nov 15 20:43:31 2014  Kouhei Sutou  <kou@cozmixng.org>
+
+	* test/rexml/test_document.rb
+	  (REXMLTests::TestDocument::EntityExpansionLimitTest): Define
+	  test XML in each test method because (1) each XML in used only
+	  one test and (2) related data and code should be close.
+
 Sat Nov 15 20:39:06 2014  Kouhei Sutou  <kou@cozmixng.org>
 
 	* test/rexml/test_document.rb
